# stratumflow

./: .gitignore  README.md  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: deploy_cloud_function.yml  tests.yml
src/config/: __init__.py  app_config.py  logger.py
src/functions/: __init__.py  refresh_all_user_subscription_list.py
src/functions/paubox/: refresh_all_user_subscription_list.py
src/functions/paubox_example/: __init__.py  refresh_all_user_subscription_list.py
src/helpers/: __init__.py  date_time_utils.py  email_validation.py
src/paubox/: helpers.py  subscribers.py  subscription_list.py
src/paubox_api/: helpers.py  subscribers.py  subscription_list.py
src/paubox_api_example/: __init__.py  helpers.py  subscribers.py  subscription_list.py
tests/: test_subscribe.py
