[project]
name = "paubox-cloud-functions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cloudevents>=1.11.0",
    "functions-framework>=3.8.2",
    "google-api-core>=2.24.0",
    "google-cloud-bigquery>=3.27.0",
    "google-cloud-core>=2.4.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
]
